--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "socket.io-client": "^4.8.0",
+    "tailwindcss": "^3.4.14",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
