--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "chat-app-yt": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -31,5 +32,9 @@
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
     "vite": "^5.4.8"
-  }
+  },
+	
+	"engines": {
+  "node": "18.x"
+}
 }
