--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "chat-app-yt": "file:..",
+    "daisyui": "^4.12.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -33,8 +34,7 @@
     "globals": "^15.9.0",
     "vite": "^5.4.8"
   },
-	
-	"engines": {
-  "node": "18.x"
-}
+  "engines": {
+    "node": "18.x"
+  }
 }
